# OpenMAXexamples

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CommonFunctions.cpp  CommonFunctions.h  ProjectDefines.h
src/components/: Camera.cpp  Camera.h  DecoderH264.cpp  DecoderH264.h  DecoderJPEG.cpp  DecoderJPEG.h  DecoderMPEG2.cpp  DecoderMPEG2.h  EncoderH264.cpp  EncoderH264.h  EncoderJPEG.cpp  EncoderJPEG.h  NullSink.cpp  NullSink.h  VideoRenderer.cpp  VideoRenderer.h
src/core/: Callbacks.h  CommonFunctions.cpp  CommonFunctions.h  Component.cpp  Component.h  EventLocker.cpp  EventLocker.h  Logger.cpp  Logger.h  ProjectDefines.h  ThreadWorker.cpp  ThreadWorker.h  Timer.cpp  Timer.h  Tunnel.cpp  Tunnel.h  TunnelEmulator.cpp  TunnelEmulator.h
src/testcases/: BuffersNoIL.cpp  BuffersNoIL.h  CameraEncode.cpp  CameraEncode.h  CameraRender.cpp  CameraRender.h  DecodeImage.cpp  DecodeImage.h  DecodeVideo.cpp  DecodeVideo.h  DecodeVideoNullSink.cpp  EncodeImage.cpp  EncodeImage.h  EncodeVideo.cpp  EncodeVideo.h  EncodeVideoNullSink.cpp  ImageDecode.cpp  ImageDecode.h  ImageDecodeRender.cpp  ImageDecodeRender.h  ListComponents.cpp  ListComponents.h  MPEG2Stuff.cpp  MPEG2Stuff.h  ManualTunnelVideoDecodeRender.cpp  ManualTunnelVideoDecodeRender.h  NoBuffers.cpp  NoBuffers.h  PortInfo.cpp  PortInfo.h  SystemInfo.cpp  SystemInfo.h  TestCase.cpp  TestCase.h  VideoDecodeAndRender.cpp  VideoDecodeAndRender.h  VideoDecodeRender.cpp  VideoDecodeRender.h
src/threadworkers/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  TunnelBufferFeeder.cpp  TunnelBufferFeeder.h  TunnelBufferRedeemer.cpp  TunnelBufferRedeemer.h
